# libmp3lame-CMAKE

./: CMakeLists.txt  README.md
Dll/: BladeMP3EncDLL.c  CMakeLists.txt
